Fixed #14868 -- Added CSS rule to prevent long text from overflowing the "recent actions" box on the admin index page. Thanks, Chris Adams.
git-svn-id: http://code.djangoproject.com/svn/django/trunk@14892 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/media/css/dashboard.css
+++ b/django/contrib/admin/media/css/dashboard.css
@@ -22,3 +22,9 @@
 ul.actionlist li {
     list-style-type: none;
 }
+
+ul.actionlist li.changelink {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+}
